# artifacts

./: .gitmodules  README.md
deep-optimizer-states/: README.md  config-n-run.sh  master-script.sh  quick-parse-results.py
deep-optimizer-states/sample-logs/deep-optimizer-states-output-7B/: ds_config.json
nas/: README.md  datastates_colocated.qsub  deephyper-1gpu-mpi.qsub  deephyper-datastates.qsub  deephyper-datastatesnew.qsub  deephyper_notransfer_baseline.qsub  deephyper_redis.qsub  init-dh-environment2.sh  install.sh  laptop.qsub  mpi_microbenchmarks.qsub  requirements.txt  run_client.sh  run_colocated_script.sh  run_server.sh  spack.yaml  train_topk_models_fully.py  transfer_learn-mpi.py  transfer_learn_datastates-mpi.py
nas/analysis_scripts/: collect_results_script.py
nas/cpp-store/: .gitignore  CMakeLists.txt  DummyBackend.cpp  DummyBackend.hpp  changes_overview.md  client.cpp  client_lib.cpp  debug_resource.cpp  jo2.qsub  job_client.qsub  job_mpi_dh.qsub  jobs2.qsub  model_client.cpp  model_client.hpp  model_server.cpp  model_server.hpp  model_utils.hpp  server.cpp  store_test.py
nas/figures/: .gitignore  Overview.drawio  Store.drawio  Transfer.drawio  transfer_patterns_plots.jl
nas/graph-meta/: graph_test.py  models.json  prefix_utils.py  rpc_utils.py
nas/microbenchmarks/: bench_transfer.py  bench_writes-2.py  bench_writes-3.py  bench_writes.py  gen_models.py  gen_models_with_pop.py  gen_with_size.py  job_polaris.qsub  job_synthetic_incremental_store.qsub  launch_metadata_test.qsub  launch_mock_model_bench_mpi.qsub  mock_model_bench.py  mock_model_bench_mpi.py  polaris_basic_microbenchmarks_test.py  polaris_scale_hdf5.py  polaris_scale_store.py  run_storemb_bash.sh  run_storemb_bash_hdf5.sh  save_bench.py
nas/play/: archive_graphs.py  birthday.py  find_prefix.py  keras-freeze.py  load_single.py  redis-test.py  test_cpp_store.py  test_evo.py  test_import.py  testing.py  weight_vnodes.py
nas/plots/: plot_nt3_one_epoch-Beta.ipynb  plot_nt3_one_epoch.ipynb
nas/plots/.ipynb_checkpoints/: plot_nt3_one_epoch-Beta-checkpoint.ipynb  plot_nt3_one_epoch-checkpoint.ipynb
nas/servers/: redis.py
nas/tmci/: setup.py  tf_backup.json
nas/tmci/example/: lenet5.py
nas/tmci/plugin/: CMakeLists.txt  Makefile  cmake_install.cmake
nas/tmci/plugin/src/: DummyBackend.hpp  Makefile  cmake_install.cmake
nas/tmci/theta/: common.sh  run.qsub
nas/tmci/tmci/: checkpoint.py  plugins.py
nas/tmci/tmci/src/: backend.cpp  backend.hpp  checkpoint.cpp  restore.cpp
nas/transfer_learning/: __init__.py  misc_utils.py  mock_model.py
nas/transfer_learning/cli/: __init__.py
nas/transfer_learning/models/: __init__.py  application.py  attn_backup.py  attn_problem.py  attn_search_space.py  benchmark_linearReg.py  cifar10.py  combo_problem.py  combo_search_space.py  dataloader.py  global_config.py  global_load_data.py  mnist.py  my_addpad_op.py  nt3_problem.py  nt3_search_space.py  synthetic_problem.py  uno_problem.py  uno_search_space.py  variable_add_op_utils.py
nas/transfer_learning/search/: __init__.py  expiring.py
nas/transfer_learning/setup/: __init__.py  _base.py  _mpi.py  _ray.py
nas/transfer_learning/trainer/: __init__.py  transfer_trainer.py
nas/transfer_learning/transfer_methods/: __init__.py  _base.py  _common.py  _datastates.py  _noop.py  _redis.py  _simplehdf5.py
